fix misalignment of unmatched entry

--- a/stanka/compare.css
+++ b/stanka/compare.css
@@ -12,7 +12,7 @@ section.mss {
     flex-direction: row;
 }
 section.ms {
-    flex: 0 0 50%;
+    flex: 1 1 50%;
 }
 section.ms:not(:first-child) {
     padding: 0 .25em;
